monticore-generator/src/test/resources/cocos/valid/SymbolAndScopeOverwriting.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.valid;

grammar SymbolAndScopeOverwriting extends cocos.valid.SubGrammarWithSymbol {

  SubSymbol = Name "sub";

  symbol scope SubNonTer = Name "NonTer";

  SubScope = Name;
}
