monticore-generator/src/test/resources/cocos/invalid/A4047/A4047d.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4047;

grammar A4047d {

    interface A = "Foo";

    B implements A;
}